--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           I'm <span>Gina Tran<br /></span>
         </h1>
         <p class="description">
-          Passionate full-stack developer and researcher with a strong drive to create impactful,
+          Passionate full-stack Data Scientist with a strong drive to create impactful,
           innovative solutions that inspire meaningful change.
         </p>
         <div class="social-icons">
@@ -203,100 +203,109 @@
   <div class = "container">
     <div class="card">
       <div class="half-card"></div>
-      <div class="card-content">
-        <h3>The Little Prince</h3>
-        <p>A Python project that analyzes emotional and structure using NLP from the The Little Prince's texts. </p>
-        <div class="mini-cards">
+        <div class="card-content">
+          <h3>The Little Prince</h3>
+          <p>
+            A Python project that analyzes emotional and structure using NLP from
+            The Little Prince's texts.
+          </p>
           <div class="mini-cards">
             <p>Python</p>
             <p>NLP</p>
-            <p>Data visualizations</p>
+            <p>Data Visualizations</p>
           </div>
-        </div>
         <a href="https://github.com/ginaxtran/The-Little-Prince/blob/main/README.md">
-          <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
+          <button class="button">
+            <i class="fab fa-github"></i> Github
+          </button>
         </a>
       </div>
     </div>
 
   <!--EmberGuard-->
-      <div class="card">
-        <div class="half-card"></div>
-        <div class="card-content">
-          <h3>EmberGuard</h3>
-          <p>A full-stack web app providing wildfire risk predictions, emergency guidance, and shelter resources for marginalized communities.</p>
-          <div class="mini-cards">
-            <div class="mini-cards">
-              <p>JavaScript</p>
-              <p>HTML/CSS</p>
-              <p>Python</p>
-              <p>MongoDB</p>
-            </div>
-            <a href ="https://github.com/ginaxtran/EmberGuard">
-              <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
-            </a>
-          </div>
-        </div>
+  <div class="card">
+    <div class="half-card"></div>
+
+    <div class="card-content">
+      <h3>EmberGuard</h3>
+      <p>
+        A full-stack web app providing wildfire risk predictions, emergency
+        guidance, and shelter resources for marginalized communities.
+      </p>
+        <div class="mini-cards">
+          <p>JavaScript</p>
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>Python</p>
+          <p>MongoDB</p>
       </div>
+      <a href="https://github.com/ginaxtran/EmberGuard">
+        <button class="button"><i class="fab fa-github"></i> Github</button>
+      </a>
+    </div>
+  </div>
 
   <!--LinkedIin Integrety-->
-      <div class="card">
-        <div class="half-card"></div>
-        <div class="card-content">
-          <h3>LinkedIn Integrity</h3>
-          <p>A machine learning project that detects bot-generated LinkedIn profiles to using models improve platform transparency and trust.</p>
-          <div class="mini-cards">
-            <div class="mini-cards">
-              <p>Python</p>
-              <p>Scikit-learn</p>
-              <p>Machine Learning</p>
-              <p>NLP</p>
-              <p>Data Cleaning & EDA</p>
-            </div>
-            <a href ="https://github.com/ginaxtran/Linked-In-Bots">
-              <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
-            </a>
-          </div>
+  <div class="card">
+    <div class="half-card"></div>
+      <div class="card-content">
+        <h3>LinkedIn Integrity</h3>
+        <p>
+          A machine learning project that detects bot-generated LinkedIn profiles
+          to improve platform transparency and trust.
+        </p>
+        <div class="mini-cards">
+          <p>Python</p>
+          <p>Scikit-learn</p>
+          <p>Machine Learning</p>
+          <p>NLP</p>
+          <p>Data Cleaning & EDA</p>
         </div>
-      </div>
+      <a href="https://github.com/ginaxtran/Linked-In-Bots">
+        <button class="button"><i class="fab fa-github"></i> Github</button>
+      </a>
+    </div>
+  </div>
+
 
   <!--Seattle Animal Shelter-->
-      <div class="card">
-        <div class="half-card"></div>
-        <div class="card-content">
-          <h3>Seattle Animal Shelter</h3>
-          <p>A MySQL project that tracks adopters, breeds, and shelter locations to improve outreach, reduce inquiry times, and reveal adoption trends across different zip codes.</p>
-          <div class="mini-cards">
-            <div class="mini-cards">
-              <p>MySQL</p>
-              <p>Database Design</p>
-              <p>ERD Modeling</p>
-              <p>Data Management</p>
-            </div>
-            <a href="https://github.com/ginaxtran/animal-shelter">
-              <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
-            </a>
-          </div>
+  <div class="card">
+    <div class="half-card"></div>
+      <div class="card-content">
+        <h3>Seattle Animal Shelter</h3>
+        <p>
+          A MySQL project that tracks adopters, breeds, and shelter locations to
+          improve outreach, reduce inquiry times, and reveal adoption trends.
+        </p>
+        <div class="mini-cards">
+          <p>MySQL</p>
+          <p>Database Design</p>
+          <p>ERD Modeling</p>
+          <p>Data Management</p>
         </div>
-      </div>  
+      <a href="https://github.com/ginaxtran/animal-shelter">
+        <button class="button"><i class="fab fa-github"></i> Github</button>
+      </a>
+    </div>
+  </div>
 
     <!--Seattle Collisions-->
-    <div class="card">
-      <div class="half-card"></div>
+  <div class="card">
+    <div class="half-card"></div>
       <div class="card-content">
         <h3>Seattle Collisions</h3>
-        <p>A multi-page dashboard visualizations project to highlight accident hotspots and collision type breakdowns.</p>
+        <p>
+          A multi-page dashboard visualization project highlighting accident
+          hotspots and collision type breakdowns.
+        </p>
         <div class="mini-cards">
-          <div class="mini-cards">
-            <p>Tableu Public</p>
-            <p>Data visualization</p>
-            <p>Dashboard Design</p>
-          </div>
-          <a href="https://public.tableau.com/app/profile/gina4906/viz/SeattleCollisionsBaseProject_16675288541360/CollisionTypeWeatherBreakdown">
-            <button type ="button" class ="button"><i class="fas fa-bar-chart"></i> Chart</button>
-          </a>
+          <p>Tableau Public</p>
+          <p>Data Visualization</p>
+          <p>Dashboard Design</p>
         </div>
-      </div>
+      <a href="https://public.tableau.com/app/profile/gina4906/viz/SeattleCollisionsBaseProject_16675288541360/CollisionTypeWeatherBreakdown">
+        <button class="button"><i class="fas fa-bar-chart"></i> Tableau</button>
+      </a>
     </div>
   </div>
 </section>
