--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
         <div class="data_right">
           <p>By redesigning an introductory Python course with data-driven assessments such as quizzes, coding interviews, and exit tickets, 
-          student performance increased by 15%. The purpose of this research was to create more accessibility and diverse learning opportunities instead of relying on one standard curriculum...</p>
+          student performance increased by 15%. The purpose of this research was to create more accessibility and diverse learning opportunities instead of relying on one standard curriculum.</p>
         </div>
       </div>
       <!-- Product Analyst Intern -->
@@ -188,7 +188,7 @@
           <h4>September 2024 - February 2025</h4>
         </div>
         <div class="product_right">
-          <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
+          <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows.</p>
         </div>
       </div>
     </div>
