show more and contact

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </p>
         <div class="social-icons">
           <a href="https://github.com/ginaxtran" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="mailto:ginatran321@gmail.com"><i class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/gina-tran123/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:ginatran321@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
       </div>
       <div class="image">
@@ -210,6 +210,29 @@
   </div>
  
   <div class="container">
+  
+  <!---Swipe to Stock-->
+  <div class="card" data-category="bi">
+    <div class="half-card"></div>
+      <div class="card-content">
+        <h3>Swipe to Stocks</h3>
+        <p>Analyze the relationship between consumer credit card usage and stock market trends using PostgreSQL 
+          and time series analytics.
+        </p>
+        <div class="mini-cards">
+          <p>PostgreSQL</p>
+          <p>AWS</p>
+          <p>Power BI</p>
+        </div>
+        <a href="https://github.com/ginaxtran/Swipe-to-Stocks/tree/main">
+          <button class="button">
+            <i class="fab fa-github"></i> Github (In Progress)
+          </button>
+        </a>
+      </div>
+  </div>
+
+  <!--The Little Prince-->
     <div class="card" data-category="data">
       <div class="half-card"></div>
         <div class="card-content">
@@ -223,7 +246,7 @@
             <p>NLP</p>
             <p>Data Visualizations</p>
           </div>
-        <a href="https://github.com/ginaxtran/The-Little-Prince/blob/main/README.md">
+        <a href="https://github.com/ginaxtran/The-Little-Prince/tree/main">
           <button class="button">
             <i class="fab fa-github"></i> Github
           </button>
@@ -336,7 +359,25 @@
     </div>
     </div>
   </div>
+  <div class="show-more-wrapper">
+    <button id="cardToggleBtn" class="arrow-btn"> Show More 
+      <i class="fas fa-chevron-down"></i>
+    </button>
+</div>
 </section>
-  
+<footer>
+  <div class="footer-container">
+    <div class="footer-contact">
+      <h3>Get In Touch</h3>
+      <div class="social-icons">
+        <a href="https://github.com/ginaxtran" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/gina-tran123/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:ginatran321@gmail.com"><i class="fas fa-envelope"></i></a>
+      </div>
+    </div>
+    <hr class="footer-divider">
+    <p>&copy; 2026 Gina Tran | Data Research & Product Analysis</p>
+  </div>
+</footer>
 </body>
 </html>
