clean contact and ux

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="#skills">Skills</a></li>
       <li><a href="#experiences">Experiences</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
 </nav>
@@ -365,10 +366,12 @@
     </button>
 </div>
 </section>
-<footer>
+
+<!--Footer & Contact-->
+<footer id="contact">
   <div class="footer-container">
     <div class="footer-contact">
-      <h3>Get In Touch</h3>
+      <h3>Contact</h3>
       <div class="social-icons">
         <a href="https://github.com/ginaxtran" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/gina-tran123/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -376,8 +379,9 @@
       </div>
     </div>
     <hr class="footer-divider">
-    <p>&copy; 2026 Gina Tran | Data Research & Product Analysis</p>
+    <p>&copy; 2026 Gina Tran</p>
   </div>
 </footer>
+
 </body>
 </html>
