add pm experience

--- a/index.html
+++ b/index.html
@@ -192,6 +192,19 @@
           <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows.</p>
         </div>
       </div>
+      <!---Recruitment Project Manager-->
+      <div class="row experience">
+        <div class="product_left">
+          <img src="images\phi.png" alt="phi">
+          <h2>Recruitment & Training Project Manager</h2>
+          <h4>Phi Chi Theta Business Fraternity</h4>
+          <h4>September 2024 - January 2025</h4>
+        </div>
+        <div class="product_right">
+          <p>I applied the DMAIC methodology to streamline our recruitment process, improving team efficiency by 20% and ensuring a diverse candidate pipeline. 
+             I conducted comprehensive interviews and application reviews for 50+ candidates to assess leadership potential.
+             Additionally, I served as a lead facilitator, presenting data-driven program insights to 70+ prospective members to drive engagement and participation.</p>
+        </div>     
     </div>
   </section>
 
